# monochrome-layers

./: .gitignore  Cargo.toml  README.md
layers_output/: grids.json
src/: cli.rs  color.rs  evolve.rs  grid.rs  main.rs  out.rs  process.rs
